<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secrets</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Login</string>
    <string name="code_hint">Enter Secret Code !!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_secrets">Secrets</string>
    <string name="button_save">Save</string>
    <string name="button_quit">Quit</string>
    <string name="button_help">Help</string>
    <string name="action_help">Help</string>
    <string name="text_lock">Lock</string>
    <string name="text_clock">Clock</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help">Secrets</string>
    <string name="text_image_description">Lock Image</string>
    <string name="text_about">About</string>
    <string name="text_exit">Exit</string>
    <string name="text_menu_help">Help</string>
    <string name="text_lastLogin">Last Login:</string>
    <string name="text_encrypt">Encrypt</string>
    <string name="text_decrypt">Decrypt</string>
    <string name="text_clear">Clear</string>
    <string name="decrypt_all">Decrypt All Data</string>
    <string name="text_help"><font align="center" size="18" color="red"><b>Welcome to Secrets !!\n</b></font><p>        - Secure your Credit cards details, Atm Pins, Passwords, Images, Videos, Files and all other sensitive data in this App\n
        \n- Be Assured that your secret data is not transmitted anywhere on Internet as the app doesn\'t request any permissions to access internet or sms.\n\n
        - All data is stored safely in encrypted format using strongest AES encryption !!\n
        - No worries to forget pins and passwords now !!\n
        - If you forget Secret Code, Clear application data and cache from Application Manager to reset the App and configure Secret Code and Secret data again. (Data destroyed for security)\n 
        \n<b>Usage:</b>        \n- On First Use, Set the Master Secret Code, Confirm Master Code, then Set Secret Code and Confirm Secret Code in single session by entering 6+ digit codes.
        \n If Master Code and Secret Code are not Set in same session, Enter previously set Master Code first and then Set Secret Code and Confirm same Secret Code.
        \n If you forget Master Code set in Previous session, then clear Application data from Application Manager and Set Master Code and Secret Code again in Single session
        \n- Save Your Secret data.
        \n- Next time Enter the same secret code or master secret code to Login.
        \n- After 5 unsuccessful login attempts, Application would be locked. Try after 15 minutes.
        \n\nHow To Encrypt:
        \n - Select Image in Gallery
        \n - Select Share
        \n - Select Secrets from list and your image gets decrypted and disappears from gallery
        \n\n How to Decrypt:
        \n - Login To Secrets
        \n - Go to Images or Videos or MP3 or Files Tab 
        \n - Click Decrypt button 
        \n - Select Files to Decrypt 
        \n - Click Decrypt 
        \n - Check the Files are back in Gallery !!
        </p></string>
    <string name="title_activity_android_tab_layout">Secrets</string>
    <string name="title_activity_photos">PhotosActivity</string>
    <string name="title_activity_songs">SongsActivity</string>
    <string name="title_activity_videos">VideosActivity</string>
    <string name="title_activity_files">FilesActivity</string>
    <string name="title_activity_share">Secrets</string>
    

</resources>