<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="help"
        android:contentDescription="@string/text_image_description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textViewMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/code_hint"
        android:textColor="#ff0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#ff0000"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:onClick="login"
                android:textColor="#FFFFFF"
                android:text="@string/button_login" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/buttonLogin"
                android:textColor="#FFFFFF"
                android:onClick="cancel"
                android:text="@string/button_cancel" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>